# python-project-lvl1

./: .codeclimate.yml  .gitignore  .travis.yml  README.md  pyproject.toml
brain_games/: cli.py  constants.py  game_body.py  game_factory.py
brain_games/games/: calc_game.py  ev_game.py  evgame.py  nod_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain-gcd.py  brain-prime.py  brain-progression.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_games1.py  brain_gcd.py  brain_prime.py  brain_progression.py
kevinkarlbob_brain_games.egg-info/: PKG-INFO  SOURCES.txt
