[tool.poetry]
name = "KevinKarlBob_brain_games"
version = "1.0.0"
description = "console brain games"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
              ]
readme = "README.md"
repository = "https://github.com/KevinKarlBob/python-project-lvl1"
authors = ["hleb <hleb_smaple_mail@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

